--- a/yt-scraper.ipynb
+++ b/yt-scraper.ipynb
@@ -20,7 +20,7 @@
     {
      "data": {
       "text/plain": [
-       "'/Users/henrikbolarsen/projects/whisper/Stor forskel på TV Avisens værter for 50 år siden og nu - TV Avisen.mp4'"
+       "'/Users/henrikbolarsen/projects/whisper/Er en regering hen over midten en god idé  Debatten  DR2.mp4'"
       ]
      },
      "execution_count": 2,
@@ -29,7 +29,7 @@
     }
    ],
    "source": [
-    "video = 'https://www.youtube.com/watch?v=uRU_QWNl2vY'\n",
+    "video = 'https://www.youtube.com/watch?v=IAlMjnTCVEc&t=33s'\n",
     "data = pytube.YouTube(video)\n",
     "\n",
     "audio = data.streams.get_audio_only()\n",
@@ -69,7 +69,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 13518/13518 [05:04<00:00, 44.33frames/s]\n"
+      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 18882/18882 [08:39<00:00, 36.36frames/s]\n"
      ]
     }
    ],
@@ -90,39 +90,53 @@
      "output_type": "stream",
      "text": [
       "Language: Danish\n",
-      "[00:00->00:13]: Man skal være usidvænlig uskarp, hvis man ikke kan se, at nyhedsværdene har ændret sig de seneste 50 år.\n",
-      "[00:13->00:15]: Godaften og velkommen til TV-Avisen.\n",
-      "[00:15->00:16]: Godaften.\n",
-      "[00:16->00:18]: Godaften, så er der TV-Avisen.\n",
-      "[00:18->00:19]: Nyderne er stadigvæk til centraliske.\n",
-      "[00:19->00:22]: Først og fremmest taler de forskelligt.\n",
-      "[00:22->00:23]: Godaften.\n",
-      "[00:23->00:25]: Meget pænt godaften.\n",
-      "[00:25->00:28]: Ja, det er det. Men vores sprog var jo godt.\n",
-      "[00:28->00:32]: Godaften. Det er nok det nærmeste. Det lyder omsvagt, ikke?\n",
-      "[00:32->00:33]: Det lyder dumt.\n",
-      "[00:33->00:34]: De talte jo meget tydeligere end jer.\n",
-      "[00:34->00:36]: Ja, det er nok rigtigt.\n",
-      "[00:36->00:45]: Vi gik jo til taletræning, og vi lavede sprog- og halsøvelser, inden vi gik på.\n",
-      "[00:45->00:50]: På den måde var det også ligesom på så mange andre måder end en helt anden verden.\n",
-      "[00:50->00:53]: Kår Kvester bliver gett majster i nyhedsværdere i hver sin tid.\n",
-      "[00:53->00:57]: Han lige nu, og hun fra dengang i 70'erne og 80'erne.\n",
-      "[00:57->01:00]: Jeg var en af de første kvinder, der læste tv-visen op.\n",
-      "[01:00->01:04]: Og dengang sagde man jo, at man ikke kan lade en kvinde læse nyheder op.\n",
-      "[01:04->01:08]: Det er alt for alvorligt og seriøst. Det kommer der ikke nogen mennesker til at tro på.\n",
-      "[01:08->01:14]: Ser man på nyhedsværderne gennem tiden, vil man også bemærke, at de ikke bevægede sig så meget dengang.\n",
-      "[01:14->01:18]: De sidder ned. Det er roligt, og det er mere langsomt.\n",
-      "[01:18->01:24]: Og man venter lidt på, hvad har verden, altså Birgit her, mundt til mig i dag.\n",
-      "[01:24->01:27]: Hvor var jeg heldig, at jeg fik lov at sidde ned.\n",
-      "[01:27->01:33]: Jeg tænker faktisk ofte over det, at alle de steglige mennesker, der skal stå op og være med i programmerne,\n",
-      "[01:33->01:37]: de skal stå og stå og stå. Og man kan blive helt træt på deres vegne.\n",
-      "[01:37->01:42]: Og de skal også gå. Og de skal gå, ja. Gå kan der gå, ikke?\n",
-      "[01:42->01:49]: Hvis Birgit Majster skulle skabe ekstra opmærksomhed, så plejede hun blot at læne sig en anelse frem mod kameraet.\n",
-      "[01:49->01:54]: Det var nok i virkeligheden en vane, ikke? Men det handlede også om, hvis jeg skal prøve at se tilbage på det,\n",
-      "[01:54->02:02]: det handlede også om at komme ind og sige, det her, det er vigtigt. Og det er vigtigt for dig.\n",
-      "[02:02->02:05]: Så er det, man tænker. Hun har det stadig i sig.\n",
-      "[02:05->02:11]: Forestil dig, at du pludselig sad i vores nye studie med alle mulige ting. Hvordan ville det være?\n",
-      "[02:11->02:19]: Jeg tror, det ville være det samme. Jeg ved det ikke.\n"
+      "[00:00->00:03]: Jeg er også lidt overrasket over, at Lars Løkke står på den her side i aften.\n",
+      "[00:03->00:11]: Jeg tænkte egentlig på, at man skulle stå ved den ledige pult dernede, fordi når man hører ham, så lyder det jo mere som om, at du kommer til at pege på Mette Frederiksen.\n",
+      "[00:11->00:12]: Men det er jo rent røv det der, Inger.\n",
+      "[00:12->00:19]: Men det lyder jo utrolig rart, når man hører sådan noget radikal, altså både Lars Løkke-radikal og radikal og radikal.\n",
+      "[00:19->00:21]: Det lyder alle tidersk.\n",
+      "[00:21->00:24]: Men det er sådan lidt den drømmeverden på en eller anden måde.\n",
+      "[00:24->00:25]: Det er ikke noget radikal eller radikaliseret.\n",
+      "[00:25->00:30]: Jeg er også lidt overrasket over, at Lars Løkke står på den her side i aften.\n",
+      "[00:30->00:37]: Jeg tænkte egentlig på, at man skulle stå ved den ledige pult dernede, fordi når man hører ham, så lyder det jo mere som om, at du kommer til at pege på Mette Frederiksen.\n",
+      "[00:37->00:39]: Men det er jo rent røv det der, Inger.\n",
+      "[00:39->00:46]: Altså hvis der er nogen, der har forsøgt at i talesat, at det her land er udfordret, så vil jeg gerne skrive mig op på den liste.\n",
+      "[00:46->00:50]: Helt ærligt, det er et fantastisk land, vi lever i.\n",
+      "[00:50->00:51]: Det bliver det ikke ved med at være.\n",
+      "[00:51->00:58]: Jeg deler sådan set, eller statsministeren deler måske mine løs med forsikrelse, det skal vi ikke slå som coble-riden på, men statsministeren sagde nogle rigtige ting i dag.\n",
+      "[00:58->01:00]: Det her kommer til at smuldre.\n",
+      "[01:00->01:04]: Altså vores sundhedsvæsen er i bakker.\n",
+      "[01:04->01:09]: Vi har tredjedelationsindvandrere, folk der er kommet til her, som ikke er fuldt inkluderet i vores samfund endnu.\n",
+      "[01:09->01:11]: Vi har nogle kæmpe udfordringer.\n",
+      "[01:11->01:13]: Og så er det jo ikke sådan noget at snakke om, at jeg er pludselig blevet en radikal.\n",
+      "[01:13->01:17]: Altså jeg er grundlæggende det samme menneske, jeg har været hele livet, og jeg er heller ikke blevet en radikaliseret.\n",
+      "[01:17->01:22]: Men jeg har bare opdaget, at vi er nødt til at samarbejde i dybden for at få lavet nogle forandringer.\n",
+      "[01:22->01:24]: Jamen jeg ved snart ikke, hvad jeg skal sige til det.\n",
+      "[01:24->01:31]: Fordi man kan jo sige, at det er jo sådan en lidt klassisk diskussion på en eller anden måde for Lars Lykke,\n",
+      "[01:31->01:35]: det her hvor det hele er sådan noget med, at jeg peger ikke på nogen, jeg peger på noget og sådan noget.\n",
+      "[01:35->01:38]: Og det er jo enormt svært at forstå, hvad betyder det egentlig.\n",
+      "[01:38->01:44]: Altså det kan da godt være, at det er mig, der er lidt fadsfagende, men jeg har simpelthen ikke forstået, hvad det er, det betyder.\n",
+      "[01:44->01:46]: Og hvor det egentlig er, at du peger...\n",
+      "[01:46->01:50]: Du siger for Støjberg, at det lyder på dig som om, at Lykke lever i en drømmeverden.\n",
+      "[01:50->01:51]: Jamen i hvert fald sådan en eller anden...\n",
+      "[01:51->01:56]: Altså lad os nu sætte os ind i værkstedet og så prøve at se, om vi kan på en eller anden måde kreere et eller andet,\n",
+      "[01:56->01:58]: der når lidt hen over midten.\n",
+      "[01:58->02:01]: Støjberg siger, at hun ønsker en blå regering. Hun mener, at hun kunne få sine ønsker opfyldt der.\n",
+      "[02:01->02:06]: Er det ikke pragmatisk og realistisk? Er det ikke rigtigt, at det er langt lidt, at der er for store forholdelser til?\n",
+      "[02:06->02:07]: Jo jo.\n",
+      "[02:07->02:08]: Helt sikkert, og stillestanden er altid godt.\n",
+      "[02:08->02:18]: Og danskerne vil gerne forbedre, og de havde forandringer. Og det er jo der, ledelse kommer ind. Og jeg lever i en drømmeverden. Jeg tror på den danske drøm. Jeg tror på, at rigtig mange danskere går ind for det her land,\n",
+      "[02:18->02:22]: hvor man faktisk bedre kan realisere den amerikanske drøm, end man kan i USA.\n",
+      "[02:22->02:23]: Men det er ved at sande til.\n",
+      "[02:23->02:28]: Min generation er den sidste generation, der har haft statsgaranti for at have en ekstrem social mobilitet.\n",
+      "[02:28->02:30]: Det står stille derude.\n",
+      "[02:30->02:36]: Nogen, der hylder velfærdsstaten, velfærdssamfundet Danmark, er nødt til at tage ansvar for at få strammet badonerne.\n",
+      "[02:36->02:38]: Og det er ikke min position.\n",
+      "[02:38->02:42]: Jamen, jeg ønsker jo ikke stillestand overhovedet. Jeg kan da se masser af ting, der skal laves om.\n",
+      "[02:42->02:47]: For eksempel at flere indvandrer skal ind på arbejdsmarked, fordi du har da ikke at være i Danmark og så ikke bidrag.\n",
+      "[02:47->02:53]: Så det kan jeg da sagtens se, og det kommer da til at kræve, for eksempel en skattereform, der sænker skatten i bunden, så det bliver mere kapitalistisk.\n",
+      "[02:53->02:55]: Fordi der er alt for mange for, hvem der ikke kan betale sig.\n",
+      "[02:55->03:09]: Hvis der var nogen af vores her, der havde glædet sig...\n"
      ]
     }
    ],
