--- a/yt-scraper.ipynb
+++ b/yt-scraper.ipynb
@@ -29,7 +29,7 @@
     }
    ],
    "source": [
-    "video = 'https://www.youtube.com/watch?v=IAlMjnTCVEc&t=33s'\n",
+    "video = 'https://www.youtube.com/watch?v=IAlMjnTCVEc'\n",
     "data = pytube.YouTube(video)\n",
     "\n",
     "audio = data.streams.get_audio_only()\n",
@@ -148,6 +148,26 @@
     "\n",
     "for segments in result[\"segments\"]:\n",
     "    print(f'[{format_seconds(segments[\"start\"])}->{format_seconds(segments[\"end\"])}]:{segments[\"text\"]}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "' Jeg er også lidt overrasket over, at Lars Løkke står på den her side i aften. Jeg tænkte egentlig på, at man skulle stå ved den ledige pult dernede, fordi når man hører ham, så lyder det jo mere som om, at du kommer til at pege på Mette Frederiksen. Men det er jo rent røv det der, Inger. Men det lyder jo utrolig rart, når man hører sådan noget radikal, altså både Lars Løkke-radikal og radikal og radikal. Det lyder alle tidersk. Men det er sådan lidt den drømmeverden på en eller anden måde. Det er ikke noget radikal eller radikaliseret. Jeg er også lidt overrasket over, at Lars Løkke står på den her side i aften. Jeg tænkte egentlig på, at man skulle stå ved den ledige pult dernede, fordi når man hører ham, så lyder det jo mere som om, at du kommer til at pege på Mette Frederiksen. Men det er jo rent røv det der, Inger. Altså hvis der er nogen, der har forsøgt at i talesat, at det her land er udfordret, så vil jeg gerne skrive mig op på den liste. Helt ærligt, det er et fantastisk land, vi lever i. Det bliver det ikke ved med at være. Jeg deler sådan set, eller statsministeren deler måske mine løs med forsikrelse, det skal vi ikke slå som coble-riden på, men statsministeren sagde nogle rigtige ting i dag. Det her kommer til at smuldre. Altså vores sundhedsvæsen er i bakker. Vi har tredjedelationsindvandrere, folk der er kommet til her, som ikke er fuldt inkluderet i vores samfund endnu. Vi har nogle kæmpe udfordringer. Og så er det jo ikke sådan noget at snakke om, at jeg er pludselig blevet en radikal. Altså jeg er grundlæggende det samme menneske, jeg har været hele livet, og jeg er heller ikke blevet en radikaliseret. Men jeg har bare opdaget, at vi er nødt til at samarbejde i dybden for at få lavet nogle forandringer. Jamen jeg ved snart ikke, hvad jeg skal sige til det. Fordi man kan jo sige, at det er jo sådan en lidt klassisk diskussion på en eller anden måde for Lars Lykke, det her hvor det hele er sådan noget med, at jeg peger ikke på nogen, jeg peger på noget og sådan noget. Og det er jo enormt svært at forstå, hvad betyder det egentlig. Altså det kan da godt være, at det er mig, der er lidt fadsfagende, men jeg har simpelthen ikke forstået, hvad det er, det betyder. Og hvor det egentlig er, at du peger... Du siger for Støjberg, at det lyder på dig som om, at Lykke lever i en drømmeverden. Jamen i hvert fald sådan en eller anden... Altså lad os nu sætte os ind i værkstedet og så prøve at se, om vi kan på en eller anden måde kreere et eller andet, der når lidt hen over midten. Støjberg siger, at hun ønsker en blå regering. Hun mener, at hun kunne få sine ønsker opfyldt der. Er det ikke pragmatisk og realistisk? Er det ikke rigtigt, at det er langt lidt, at der er for store forholdelser til? Jo jo. Helt sikkert, og stillestanden er altid godt. Og danskerne vil gerne forbedre, og de havde forandringer. Og det er jo der, ledelse kommer ind. Og jeg lever i en drømmeverden. Jeg tror på den danske drøm. Jeg tror på, at rigtig mange danskere går ind for det her land, hvor man faktisk bedre kan realisere den amerikanske drøm, end man kan i USA. Men det er ved at sande til. Min generation er den sidste generation, der har haft statsgaranti for at have en ekstrem social mobilitet. Det står stille derude. Nogen, der hylder velfærdsstaten, velfærdssamfundet Danmark, er nødt til at tage ansvar for at få strammet badonerne. Og det er ikke min position. Jamen, jeg ønsker jo ikke stillestand overhovedet. Jeg kan da se masser af ting, der skal laves om. For eksempel at flere indvandrer skal ind på arbejdsmarked, fordi du har da ikke at være i Danmark og så ikke bidrag. Så det kan jeg da sagtens se, og det kommer da til at kræve, for eksempel en skattereform, der sænker skatten i bunden, så det bliver mere kapitalistisk. Fordi der er alt for mange for, hvem der ikke kan betale sig. Hvis der var nogen af vores her, der havde glædet sig...'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result[\"text\"]"
    ]
   },
   {
